Format of x-axis on activiy plot is changed. Conslusions are not accurate and needs in improvement.

--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -10,6 +10,7 @@ output:
 ```{r echo=TRUE}
 suppressMessages(library(dplyr))
 library(ggplot2)
+library(scales)
 
 # Set locale for correct (US) weekdays abbreviation
 invisible(Sys.setlocale("LC_TIME", "us"))
@@ -68,7 +69,9 @@ qplot(strptime(time,"%H:%M"),steps,
       data = aggregated_activity_by_interval,
       main="Fig 2. Daily activity pattern",
       xlab = "Time of the day",
-      ylab = "Average number of steps per 5-minute interval") + theme_bw()
+      ylab = "Average number of steps per 5-minute interval") + 
+    scale_x_datetime(labels = date_format("%H:00"),breaks = date_breaks("2 hour"))+ 
+    theme_bw()
 
 ```
 
@@ -136,7 +139,9 @@ qplot(strptime(time,"%H:%M"),steps,
       data = aggregated_activity_by_interval_nona,
       main="Fig 4. Daily activity pattern",
       xlab = "Time of the day",
-      ylab = "Average number of steps per 5-minute interval") + theme_bw()
+      ylab = "Average number of steps per 5-minute interval")  + 
+    scale_x_datetime(labels = date_format("%H:00"),breaks = date_breaks("2 hour")) +
+    theme_bw()
 
 ```
 
