--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -8,6 +8,7 @@ output:
 
 ## Loading and preprocessing the data
 ```{r echo=TRUE}
+options(stringsAsFactors = FALSE)
 suppressMessages(library(dplyr))
 library(ggplot2)
 library(scales)
@@ -16,6 +17,7 @@ library(scales)
 invisible(Sys.setlocale("LC_TIME", "us"))
 
 # read data
+# you should change path according to your system
 setwd("c:/Users/gregory/Documents/!Projects/Trainings/Coursera - Reproducible Research/RepData - PA1/")
 file_with_data=unzip("activity.zip") 
 activity = read.csv(file_with_data,stringsAsFactors=FALSE)
@@ -35,12 +37,12 @@ rm(day_of_week) # we don't need this var anymore
 ## What is mean total number of steps taken per day?
 ```{r echo=TRUE}
 
-# aggregate number of steps by day
-aggregated_activity = select(activity,date,steps) %>% group_by(date) %>% summarize(steps=sum(steps,na.rm = TRUE))
+# aggregate number of steps by day - omit missing values
+aggregated_activity = select(na.omit(activity),date,steps) %>% group_by(date) %>% summarize(steps=sum(steps,na.rm = TRUE))
 
 steps_mean = round(mean(aggregated_activity$steps))
 steps_median = median(aggregated_activity$steps)
-hist(aggregated_activity$steps, main="Fig 1. Number of steps per day",xlab="")
+hist(aggregated_activity$steps, main="Fig. 1. Number of steps per day",xlab="")
 abline(v=steps_mean,col="blue",lwd=2,lty=2)
 abline(v=steps_median,col="green",lwd=2,lty=2)
 legend("topright",
@@ -51,23 +53,22 @@ legend("topright",
 
 ```
 
-##### Table 1. Number of steps
+####Table 1. Number of steps
 
 Statistic   | Steps per day
 -------|-------------
-Mean   | `r steps_mean`
-Median | `r steps_median`
+Mean   | `r format(steps_mean,scientific = FALSE)`
+Median | `r format(steps_median,scientific = FALSE)`
 
 ## What is the average daily activity pattern?
 ```{r echo=TRUE}
-aggregated_activity_by_interval = select(activity,time,steps) %>% group_by(time) %>% summarize(steps=mean(steps,na.rm = TRUE))
+aggregated_activity_by_interval = select(na.omit(activity),time,steps) %>% group_by(time) %>% summarize(steps=mean(steps,na.rm = TRUE))
 
-interval_max_steps = max(aggregated_activity_by_interval$steps)
-interval_max = aggregated_activity_by_interval[which.max(aggregated_activity_by_interval$steps),"time"]
+
 qplot(strptime(time,"%H:%M"),steps,
       geom="line",
       data = aggregated_activity_by_interval,
-      main="Fig 2. Daily activity pattern",
+      main="Fig. 2. Daily activity pattern",
       xlab = "Time of the day",
       ylab = "Average number of steps per 5-minute interval") + 
     scale_x_datetime(labels = date_format("%H:00"),breaks = date_breaks("2 hour"))+ 
@@ -75,7 +76,16 @@ qplot(strptime(time,"%H:%M"),steps,
 
 ```
 
-So we may conclude that average maximum activity is at `r interval_max` with `r round(interval_max_steps)` average number of steps per interval.
+
+```{r echo = TRUE}
+
+# maximum number of steps in average
+interval_max_steps = max(aggregated_activity_by_interval$steps)
+interval_max = aggregated_activity_by_interval[which.max(aggregated_activity_by_interval$steps),"time"]
+
+```
+
+So **average maximum activity is at `r interval_max` with `r round(interval_max_steps)` average number of steps per interval**.
 
 
 ## Imputing missing values
@@ -85,11 +95,11 @@ rows_with_na = nrow(activity) - sum(complete.cases(activity))
 
 ```
 
-There are `r rows_with_na` rows with NA. It is about `r round(rows_with_na/nrow(activity)*100)`% of cases. Strategy for filling NAs - we replace NAs with median number of steps for this time from others non-missing dates. We will use averages from weekdays for imputing weekdays missing values and accordingly weekends for weekends.
+There are `r rows_with_na` rows with NA. It is about `r round(rows_with_na/nrow(activity)*100)`% of cases. Strategy for filling NAs - we replace NAs with median number of steps for this time interval from others non-missing dates. We will use data from weekdays for imputing weekdays missing values and accordingly weekends for weekends.
 
 ```{r echo=TRUE}
 # compute medians
-activity_medians = group_by(activity,week,interval) %>% summarise(median_steps=median(steps,na.rm=TRUE))
+activity_medians = group_by(na.omit(activity),week,interval) %>% summarise(median_steps=median(steps))
 activity_nona = left_join(activity,activity_medians) 
 # replace missing values
 activity_nona = mutate(activity_nona,steps=ifelse(is.na(steps),median_steps,steps))
@@ -100,9 +110,9 @@ rm(activity_medians)
 # plot histogramm and compute mean/median without NAs
 aggregated_activity_nona = select(activity_nona,date,steps) %>% group_by(date) %>% summarize(steps=sum(steps,na.rm = TRUE))
 
-steps_mean_nona = round(mean(aggregated_activity_nona$steps))
-steps_median_nona = median(aggregated_activity_nona$steps)
-hist(aggregated_activity_nona$steps, main="Fig 3. Number of steps per day (imputed NAs)",xlab="")
+steps_mean_nona = round(mean(aggregated_activity_nona$steps, na.rm = TRUE))
+steps_median_nona = median(aggregated_activity_nona$steps, na.rm = TRUE)
+hist(aggregated_activity_nona$steps, main="Fig. 3. Number of steps per day (imputed NAs)",xlab="")
 abline(v=steps_mean_nona,col="blue",lwd=2,lty=2)
 abline(v=steps_median_nona,col="green",lwd=2,lty=2)
 legend("topright",
@@ -113,14 +123,14 @@ legend("topright",
 
 ```
 
-##### Table 2. Number of steps. Value comparison with imputed NA.
+##### Table 2. Number of steps. Comparison with imputed NA.
 
 Statistic   | Steps per day | Steps per day (imputed NA's)
 -------|--------------------|------------------------------
-Mean   | `r steps_mean`     | `r steps_mean_nona`
-Median | `r steps_median`   | `r steps_median_nona`
+Mean   | `r format(steps_mean,scientific = FALSE)`     | `r format(steps_mean_nona,scientific = FALSE)`
+Median | `r format(steps_median,scientific = FALSE)`   | `r format(steps_median_nona,scientific = FALSE)`
 
-There is no significant changes in distribution of steps. Medians are the same. Let's check difference in means with t-test.
+It seems there is frequency increasing of days with low activity. Let's check difference in means with t-test.
 
 ```{r echo=TRUE}
 t.test(aggregated_activity$steps,aggregated_activity_nona$steps)
@@ -137,7 +147,7 @@ qplot(strptime(time,"%H:%M"),steps,
       facets = week ~ .,
       geom = "line",
       data = aggregated_activity_by_interval_nona,
-      main="Fig 4. Daily activity pattern",
+      main="Fig. 4. Daily activity pattern",
       xlab = "Time of the day",
       ylab = "Average number of steps per 5-minute interval")  + 
     scale_x_datetime(labels = date_format("%H:00"),breaks = date_breaks("2 hour")) +
@@ -145,7 +155,7 @@ qplot(strptime(time,"%H:%M"),steps,
 
 ```
 
-So we can make a conclusion that pattern beetween weekdays and weekends are similar. But on weekdays activity is higher - number of steps are greater than on weekends.
+So we can draw a conclusion from this plot that steps on weekdays are spreaded more uniformly through the day. Peak activity on weekends is not so high as on weekdays.
 
 ### That's all. Thank you for your attention:)
 
